Almost same as previous tag, but this version does work :)

--- a/History
+++ b/History
@@ -1,1 +1,2 @@
-2011-Feb-2      ofte  Tag V00-00-01.  Initial working version
+2011-Feb-2      ofte  Tag V00-00-01.  Initial working version (actually not working due to a bug!)
+2011-Feb-3      ofte  Tag V00-00-02   Almost same as previous tag, but this version does work :)
