--- a/History
+++ b/History
@@ -1,2 +1,3 @@
 2011-Feb-2      ofte  Tag V00-00-01.  Initial working version (actually not working due to a bug!)
 2011-Feb-3      ofte  Tag V00-00-02   Almost same as previous tag, but this version does work :)
+2011-Feb-4      ofte  Tag V00-00-03   More pyana options added, support for (some) images.
