Bkg-subtr with dark images for CsPad

--- a/History
+++ b/History
@@ -1,3 +1,4 @@
+2011-Feb-14     ofte  Tag V00-00-07   Bkg-subtr with dark images for CsPad
 2011-Feb-11     ofte  Tag V00-00-06   bugfixed. version for testing with CsPad. 
 2011-Feb-11     ofte  Tag V00-00-05   latest version for testing in control room
 2011-Feb-10     ofte  Tag V00-00-04   pyana control outsourced to different class. Support for CsPad (limited)
