--- a/History
+++ b/History
@@ -1,7 +1,8 @@
-2011-Feb-14     ofte  Tag V00-00-07   Bkg-subtr with dark images for CsPad
-2011-Feb-11     ofte  Tag V00-00-06   bugfixed. version for testing with CsPad. 
-2011-Feb-11     ofte  Tag V00-00-05   latest version for testing in control room
-2011-Feb-10     ofte  Tag V00-00-04   pyana control outsourced to different class. Support for CsPad (limited)
-2011-Feb-4      ofte  Tag V00-00-03   More pyana options added, support for (some) images.
-2011-Feb-3      ofte  Tag V00-00-02   Almost same as previous tag, but this version does work :)
-2011-Feb-2      ofte  Tag V00-00-01.  Initial working version (actually not working due to a bug!)
+2011-Feb-14  ofte                 rev 1514  Allow edit (emacs popup) configuration file
+2011-Feb-14  ofte  Tag V00-00-07  rev 1513  Bkg-subtr with dark images for CsPad
+2011-Feb-11  ofte  Tag V00-00-06            bugfixed. version for testing with CsPad. 
+2011-Feb-11  ofte  Tag V00-00-05            latest version for testing in control room
+2011-Feb-10  ofte  Tag V00-00-04            pyana control outsourced to different class. Support for CsPad (limited)
+2011-Feb-4   ofte  Tag V00-00-03            More pyana options added, support for (some) images.
+2011-Feb-3   ofte  Tag V00-00-02            Almost same as previous tag, but this version does work :)
+2011-Feb-2   ofte  Tag V00-00-01.           Initial working version (actually not working due to a bug!)
