--- a/History
+++ b/History
@@ -1,3 +1,4 @@
+2011-Feb-15  ofte  Tag V00-00-08  rev 1517  Alignment of CsPad added (Mikhail Dubrovin's method)
 2011-Feb-14  ofte                 rev 1516  Fix a typo and add a print_configuration function
 2011-Feb-14  ofte                 rev 1514  Allow edit (emacs popup) configuration file
 2011-Feb-14  ofte  Tag V00-00-07  rev 1513  Bkg-subtr with dark images for CsPad
