--- a/History
+++ b/History
@@ -1,4 +1,5 @@
-2011-Feb-25  ofte  Tag V00-00-11 rev 1550   CsPad outsourced, dependence on "test" module fixed. parameter names
+2011-Feb-25  ofte                 rev 1566   fixed a silly dependency problem
+2011-Feb-25  ofte  Tag V00-00-11  rev 1550  CsPad outsourced, dependence on "test" module fixed. parameter names
                                             for cspad improved. Save avg images. Threshold filter (to be improved)
 2011-Feb-18  ofte  Tag V00-00-10  rev 1536  Added spectrum and plot limits via config parameters
 2011-Feb-18  ofte  Tag V00-00-09  rev 1534  A few GUI improvements
