translation added to pyana_image.py

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Mar-07  ofte  no tag        rev 1582
+         - pyana_image.py tuned and tested some more. 
+	 - translation of images included (using numpy.roll)
+
 2011-Mar-05  ofte  no tag        rev 1581
          - pyana_image.py tuned and tested some more. 
 	 - still need to implement translation and scaling of images	
