xbplotter handles plotting and threshold for pyana_cspad

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,21 +11,29 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Mar-09  ofte                rev 1591
+	- xbplotter now handles all plotting for pyana_cspad
+	- xbplotter Threshold class handles threshold value and region
+	
 2011-Mar-08  ofte  V00-00-16     rev 1589
          - pyana_image.py works OK now
 	 - option to save as hdf5 file
 	 - more options to control what to plot / save
+
 2011-Mar-07  ofte  no tag        rev 1582
          - pyana_image.py tuned and tested some more. 
 	 - translation of images included (using numpy.roll)
 	 - option to save as numpy array (txt or npy)
+
 2011-Mar-06  ofte  no tag        rev 1581
          - pyana_image.py tuned and tested some more. 
 	 - still need to implement translation and scaling of images	
+
 2011-Mar-05  ofte  no tag        rev 1580
         - parameters for pyana_image to rotate, shift and scale images. 
 	- only rotate implemented so far
 	- not extensively tested...
+
 2011-Mar-04  ofte  Tag V00-00-15 rev 1578
 	- added pyana_plotter to issue plt.show() command. more tasks later
 	- added stuff to xbplotter. try to outsource plotting functions to xbplotter.Plotter 
