--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Mar-10 ofte                rev 1601
+        - Tuned pyana_bld (added plot_every_n option)
+	- Added utilities.py with PyanaOptions, to convert option strings
 2011-Mar-10 ofte                rev 1597
         - Display mode: Interactive (plt.show()) or SlideShow(plt.draw()) or None
 	- This version needs pyana V00-00-24 or later (use evt.put and evt.get)
