--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,8 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Mar-15 ofte                rev 1603
+        - Added pyana_epics, and a new GUI to select epics channels 
 2011-Mar-10 ofte                rev 1601
         - Tuned pyana_bld (added plot_every_n option)
 	- Added utilities.py with PyanaOptions, to convert option strings
