Improved parameters and defaults for all moduls. SlideShow now should work for all.

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,13 +11,19 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Mar-16 ofte                rev 1606
+        - Improved parameters and defaults for all moduls. SlideShow now should work for all.
+
 2011-Mar-16 ofte                rev 1605
         - Cleaned up XtcPyanaControl some. pyana_epics still rudimentary
+
 2011-Mar-15 ofte                rev 1603
         - Added pyana_epics, and a new GUI to select epics channels 
+
 2011-Mar-10 ofte                rev 1601
         - Tuned pyana_bld (added plot_every_n option)
 	- Added utilities.py with PyanaOptions, to convert option strings
+
 2011-Mar-10 ofte                rev 1597
         - Display mode: Interactive (plt.show()) or SlideShow(plt.draw()) or None
 	- This version needs pyana V00-00-24 or later (use evt.put and evt.get)
