--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Mar-18 ofte                rev 1609
+        - Epics PV controls variable now in xtcscanner, pyana GUI and pyana_epics.py
+	- pyana_misc.py and pyana_pnccd.py removed. 
+	
 2011-Mar-16 ofte                rev 1607
         - Some tuning of figure numbers etc. 
 	- pyana_epics improved
