--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Apr-8 ofte V00-00-18     rev 1792
+        - Some tuning. This goes with another version of the confluence documentation. 
+	- waveforms still not working. 
+	- ipimb filtering / scan should be improved. 
+
 2011-Apr-8 ofte               rev 1786
         - XtcEventBrowser/src/pyana_xppscan.py: fixed some mistake.
 	  IPMdiagnostics and IPMfilt utilities done, still some more plotting needed
