Some small improvements, cspad mainly

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,7 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
-2011-May-10 ofte                  rev 1876
+2011-May-10 ofte                  rev 1880
+       - improved cspad, still not able to subtract on-the-fly background. 
+
+2011-May-10 ofte                  rev 1877 and 1878
        - some cosmetic and some functional improvements
        - removed xbplotter, moved Threshold and Plotter classes into the utilities library
        - consistent parameter style, use comma for ranges. 
