--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-May-24 ofte                  rev 1952
+       - Added XxxData structure to pyana_bld, pyana_ipimb and pyana_scan
+	 to hold information to pass to the ipython session launched in pyana_plotter.
+	 Requires pyana V00-00-27 or later. 
+	
 2011-May-19 ofte   Tag: V00-01-03 rev 1912
        - a leftover reference to xbplotter removed
        - bugfix: full scan button threshold
