--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-May-27 ofte                  rev 1959
+	- minor changes
+
 2011-May-27 ofte                  rev 1958
 	- added pyana_encoder
 	- cleaned up waveform a little, added WaveformData (for ipython)
