--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Jun-09 ofte  Tag: V00-01-05   rev 1970
+	- for tag (for release!)
+
+2011-Jun-09 ofte                  rev 1969
+	- small fix
 2011-Jun-09 ofte                  rev 1965
 	- Much improved pyana_cspad
 	- Supports background subtraction, both from dark file and on-the-fly dark average
