--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Jun-15 ofte                   rev 1985
+        - small bugfix and some tidying up
+	
 2011-Jun-09 ofte  Tag: V00-01-05   rev 1970
 	- for tag (for release!)
 
