--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,14 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Jun-23 ofte                   rev 2031
+	- Some tuning of pyana_image. 
+	- "Solve" FIXME from yesterday by plotting each event 
+	whether or not the event is accepted. 
+
+2011-Jun-22 ofte     V00-01-06     rev 2027
+          Tag
+	
 2011-Jun-22 ofte                   rev 2026
         - fixed a bug in pyana_image (for Princeton)
 	- fixed a bug in pyana_encoder (now -1 entries for unvalid entries, needed for time line plot)
