cspad pedestal and common mode correction (starting)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,11 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Jul-08 ofte                  rev 2096
+	 - added to cspad option of using (translator) pedestal file. 
+	- added to cspad a config file for running standalone pyana
+	- cspad working on common mode correction... 
+	
 2011-Jul-05 ofte                   rev 2086
         - added fccd. 
 
