BldInfo IPM support also added to pyana_scan. Tag: V00-01-07

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Aug-04 ofte  Tag: V00-01-07   rev 2164 - 2165
+        - tag
+	- support for BldInfo IPMs also added to pyana_scan)
+	
 2011-Aug-04 ofte                  rev 2163
 	- Support for the new BldInfo IPMs added
 	
