--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,8 +11,13 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
-2011-Sep-12 ofte  Tag: V00-01-08   rev 2353 & 2354
-	- Support for Cspad2x2, within pyana_cspad.py. 
+2011-Sep-12 ofte  Tag: V00-01-09   rev 2356 
+        - bugfix (cspad.py)
+	- replaced max-value "projections" with average projections (images)
+	- new tag
+	
+2011-Sep-12 ofte  Tag: V00-01-08   rev 2353 & 2353
+        - Support for Cspad2x2, within pyana_cspad.py. 
 	- minimal other changes. 
 	- tag before changing the GUI interface. 
 	
