--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Sep-16 ofte                rev 2404
+        - minor modifications
+	
 2011-Sep-16 ofte                rev 2401
 	- pyana_image_beta and pyana_plotter_beta added
 	- minor changes to new GUI
