save max single-shot events of cspad and image

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,9 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Sep-19 ofte 
+	- save max 100 (parameter) single-shot events (cspad and image (old))
+	
 2011-Sep-16 ofte                rev 2404
         - minor modifications
 	
