bugfix by removing pixel save from cspad

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,7 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
-2011-Sep-19 ofte 
+2011-Sep-19 ofte                rev 2410
+        - removed pixel save from cspad to "solve" a problem
+
+2011-Sep-19 ofte                rev 2409
 	- save max 100 (parameter) single-shot events (cspad and image (old))
 	
 2011-Sep-16 ofte                rev 2404
