cspad improvements (axis ticks and pixel array)

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,10 @@ Package author: Ingrid Ofte
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+2011-Sep-20 ofte                rev 2412
+        - solved the cspad pixel array problem, still lacks the ability to save it. 
+	- improved the axes labeling (ticks) for projection plots of cspad. 
+
 2011-Sep-19 ofte                rev 2411
         - included gaps and margins for full Cspad detector view. Now uses 
 	  all the same calibration files as psana uses (potentially at least)
